--- a/vercel.json
+++ b/vercel.json
@@ -2,24 +2,16 @@
   "version": 2,
   "builds": [
     {
-      "src": "hotel_prj/wsgi.py",
+      "src": "build.sh",
       "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "staticfiles_build" }
+      "config": {
+        "runtime": "python3.12",
+        "maxLambdaSize": "50mb"
+      }
     }
   ],
   "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "hotel_prj/wsgi.py"
-    }
+    { "src": "/static/(.*)", "dest": "/static/$1" },
+    { "src": "/(.*)", "dest": "hotel_prj/asgi.py" }
   ]
 }
