--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "build.sh",
+      "src": "hotel_prj/asgi.py",
       "use": "@vercel/python",
       "config": {
         "runtime": "python3.12",
@@ -11,7 +11,13 @@
     }
   ],
   "routes": [
-    { "src": "/static/(.*)", "dest": "/static/$1" },
-    { "src": "/(.*)", "dest": "hotel_prj/asgi.py" }
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "hotel_prj/asgi.py"
+    }
   ]
 }
