--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 EMAIL_USER = "nitinsharwal88@gmail.com"
 EMAIL_PASSWORD = "mfpy gzli jplh pnmj"
+# SECRET_KEY="django-insecure-7rwndw#hwmeti5^2j-8rw!j0b5lke#pmws)a7e^399nrmglpfr"
